Add push trigger for performance test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,10 @@
 name: TigerGraph Query Performance Test
 
 on:
-    workflow_dispatch:
+    push:
+        branches:
+            - main
+            - fix/workflow-test
 
 jobs:
     performance-test:
