--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
                 docker run -d --name tigergraph \
                 -p 14022:14022 \
                 -p 9000:9000 \
-                tigergraph/community:latest
+                tigergraph/community:4.2.2
 
           - name: Start TigerGraph services inside container
             run: |
