--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,31 +23,29 @@ jobs:
                 echo "Initializing TigerGraph with gadmin..."
                 docker exec tigergraph bash -c \
                     "./tigergraph/app/cmd/gadmin start all"
-                echo "Waiting for TigerGraph services to fully start..."
         
           - name: Copy cskg.tsv into TigerGraph container
             run: |
                 # Copy the file from GitHub workspace into the container
-                docker exec tigergraph mkdir -p /home/tigergraph/mydata
-                docker cp ./cskg.tsv tigergraph:/home/tigergraph/mydata/cskg.tsv
+                docker cp ./cskg.tsv tigergraph:/home/tigergraph/cskg.tsv
+                # Change mode to ensure TigerGraph can read it
+                docker exec -u root tigergraph bash -c \
+                    "chmod 644 /home/tigergraph/cskg.tsv"
                 
-                echo "File cskg.tsv copied into /home/tigergraph/mydata inside container."
+                echo "File cskg.tsv copied into /home/tigergraph inside container."
             
           - name: Copy initialize file into TigerGraph container
             run: |
                 # Copy the file from GitHub workspace into the container
-                docker cp ./import.gsql tigergraph:/home/tigergraph/mydata/import.gsql
+                docker cp ./import.gsql tigergraph:/home/tigergraph/import.gsql
 
-                echo "File import.gsql copied into /home/tigergraph/mydata inside container."
+                echo "File import.gsql copied into /home/tigergraph inside container."
             
           - name: Run init script
             run: |
                 docker exec tigergraph bash -c \
-                    "source /home/tigergraph/.bashrc && ./tigergraph/app/cmd/gsql < /home/tigergraph/mydata/import.gsql"
+                    "source /home/tigergraph/.bashrc && ./tigergraph/app/cmd/gsql < /home/tigergraph/import.gsql"
                 
-                docker exec tigergraph bash -c \
-                    "source /home/tigergraph/.bashrc && \
-                    ./tigergraph/app/cmd/gsql 'RUN LOADING JOB load_relations USING f="./mydata/cskg.tsv"'"
 
           - name: Run query multiple times and collect metrics
             id: metrics
