--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,8 @@ jobs:
         steps:
           - name: Checkout
             uses: actions/checkout@v4
+            with:
+              lfs: true
 
           - name: Start TigerGraph container
             run: |
