--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,9 +15,10 @@ jobs:
 
           - name: Start TigerGraph container
             run: |
-                docker run -d --name tigergraph \
+                docker run -d --name tigergraph123 \
                 -p 14022:14022 \
                 -p 9000:9000 \
+                -v ./:/home/tigergraph \
                 tigergraph/community:4.2.2
 
           - name: Start TigerGraph services inside container
@@ -26,26 +27,26 @@ jobs:
                 docker exec tigergraph bash -c \
                     "./tigergraph/app/cmd/gadmin start all"
         
-          - name: Copy cskg.tsv into TigerGraph container
-            run: |
-                # Copy the file from GitHub workspace into the container
-                docker cp ./cskg.tsv tigergraph:/home/tigergraph/cskg.tsv
-                # Change mode to ensure TigerGraph can read it
-                docker exec -u root tigergraph bash -c \
-                    "chmod 644 /home/tigergraph/cskg.tsv"
+        #   - name: Copy cskg.tsv into TigerGraph container
+        #     run: |
+        #         # Copy the file from GitHub workspace into the container
+        #         docker cp ./cskg.tsv tigergraph:/home/tigergraph/cskg.tsv
+        #         # Change mode to ensure TigerGraph can read it
+        #         docker exec -u root tigergraph bash -c \
+        #             "chmod 644 /home/tigergraph/cskg.tsv"
                 
-                echo "File cskg.tsv copied into /home/tigergraph inside container."
+        #         echo "File cskg.tsv copied into /home/tigergraph inside container."
           - name: Print head of cskg file
             run: |
                 docker exec tigergraph bash -c \
                     "head -n 5 /home/tigergraph/cskg.tsv"
             
-          - name: Copy initialize file into TigerGraph container
-            run: |
-                # Copy the file from GitHub workspace into the container
-                docker cp ./import.gsql tigergraph:/home/tigergraph/import.gsql
+        #   - name: Copy initialize file into TigerGraph container
+        #     run: |
+        #         # Copy the file from GitHub workspace into the container
+        #         docker cp ./import.gsql tigergraph:/home/tigergraph/import.gsql
 
-                echo "File import.gsql copied into /home/tigergraph inside container."
+        #         echo "File import.gsql copied into /home/tigergraph inside container."
 
           - name: Run init script
             run: |
