--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,54 +52,69 @@ jobs:
             run: |
                 docker exec tigergraph bash -c \
                     "source /home/tigergraph/.bashrc && ./tigergraph/app/cmd/gsql < /home/tigergraph/mydata/import.gsql"
+
+          - name: Verify data load
+            run: |
+                docker exec tigergraph bash -c \
+                    "source /home/tigergraph/.bashrc && ./tigergraph/app/cmd/gsql 'USE GRAPH ADS BEGIN
+                        CREATE OR REPLACE DISTRIBUTED QUERY query_01(STRING startVid) FOR GRAPH ADS {
+
+                            successors = SELECT next
+                                FROM Entity:current -(Relation:e)-> Entity:next
+                                WHERE current.id = startVid;
+
+                            PRINT successors;
+                        }
+                        INSTALL QUERY query_01
+                        END'"
                 
 
-          - name: Run query multiple times and collect metrics
-            id: metrics
-            run: |
-                TIMES=()
-                MEMS=()
+        #   - name: Run query multiple times and collect metrics
+        #     id: metrics
+        #     run: |
+        #         TIMES=()
+        #         MEMS=()
 
-                for i in {1..5}; do
-                    echo "Run $i"
+        #         for i in {1..5}; do
+        #             echo "Run $i"
 
-                    SECONDS=0
+        #             SECONDS=0
 
 
-                    OUTPUT=$(docker exec tigergraph bash -c \
-                    "source /home/tigergraph/.bashrc && \
-                    ./tigergraph/app/cmd/gsql 'USE GRAPH ADS RUN QUERY query_01(\"/c/en/linguistics\")'")
+        #             OUTPUT=$(docker exec tigergraph bash -c \
+        #             "source /home/tigergraph/.bashrc && \
+        #             ./tigergraph/app/cmd/gsql 'USE GRAPH ADS RUN QUERY query_01(\"/c/en/linguistics\")'")
                     
-                    duration=$SECONDS
-                    echo "$((duration / 60)) minutes and $((duration % 60)) seconds elapsed."
-                    #########
+        #             duration=$SECONDS
+        #             echo "$((duration / 60)) minutes and $((duration % 60)) seconds elapsed."
+        #             #########
 
-                    # Extract memory usage from output
-                    MEM=$(echo "$OUTPUT" | grep "Maximum resident set size" | awk '{print $6}')
-                    echo "Run $i memory: $MEM KB"
-                    echo "Time: $duration   Memory: $MEM KB"
+        #             # Extract memory usage from output
+        #             MEM=$(echo "$OUTPUT" | grep "Maximum resident set size" | awk '{print $6}')
+        #             echo "Run $i memory: $MEM KB"
+        #             echo "Time: $duration   Memory: $MEM KB"
 
-                    # Store results
-                    TIMES+=("$duration")
-                    MEMS+=("$MEM")
-                done
+        #             # Store results
+        #             TIMES+=("$duration")
+        #             MEMS+=("$MEM")
+        #         done
 
-                # Sort time and memory arrays
-                SORTED_TIMES=($(printf "%s\n" "${TIMES[@]}" | sort))
-                SORTED_MEMS=($(printf "%s\n" "${MEMS[@]}" | sort -n))
+        #         # Sort time and memory arrays
+        #         SORTED_TIMES=($(printf "%s\n" "${TIMES[@]}" | sort))
+        #         SORTED_MEMS=($(printf "%s\n" "${MEMS[@]}" | sort -n))
 
-                # Remove min (index 0) and max (index 4)
-                TRIMMED_TIMES=("${SORTED_TIMES[@]:1:3}")
-                TRIMMED_MEMS=("${SORTED_MEMS[@]:1:3}")
+        #         # Remove min (index 0) and max (index 4)
+        #         TRIMMED_TIMES=("${SORTED_TIMES[@]:1:3}")
+        #         TRIMMED_MEMS=("${SORTED_MEMS[@]:1:3}")
 
-                # Compute min of remaining 3 times
-                FINAL_TIME=$(printf "%s\n" "${TRIMMED_TIMES[@]}" | sort | head -n1)
-                FINAL_MEM=$(printf "%s\n" "${TRIMMED_MEMS[@]}" | sort -n | head -n1)
+        #         # Compute min of remaining 3 times
+        #         FINAL_TIME=$(printf "%s\n" "${TRIMMED_TIMES[@]}" | sort | head -n1)
+        #         FINAL_MEM=$(printf "%s\n" "${TRIMMED_MEMS[@]}" | sort -n | head -n1)
 
-                echo "final_time=$FINAL_TIME" >> $GITHUB_OUTPUT
-                echo "final_memory=$FINAL_MEM" >> $GITHUB_OUTPUT
+        #         echo "final_time=$FINAL_TIME" >> $GITHUB_OUTPUT
+        #         echo "final_memory=$FINAL_MEM" >> $GITHUB_OUTPUT
 
-          - name: Display results
-            run: |
-                echo "Final measured time   : ${{ steps.metrics.outputs.final_time }}"
-                echo "Final measured memory : ${{ steps.metrics.outputs.final_memory }} KB"
+        #   - name: Display results
+        #     run: |
+        #         echo "Final measured time   : ${{ steps.metrics.outputs.final_time }}"
+        #         echo "Final measured memory : ${{ steps.metrics.outputs.final_memory }} KB"
