--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,20 @@ jobs:
         #     with:
         #       lfs: true
           - name: Checkout code
-            uses: nschloe/action-cached-lfs-checkout@v1
+            uses: actions/checkout@v4
+
+          - name: Create LFS file list
+            run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
+
+          - name: Restore LFS cache
+            uses: actions/cache@v4
+            id: lfs-cache
+            with:
+                path: .git/lfs
+                key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}-v1
+
+          - name: Git LFS Pull
+            run: git lfs pull
 
           - name: Start TigerGraph container
             run: |
