--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,30 +71,26 @@ jobs:
                 docker exec tigergraph bash -c \
                     "source /home/tigergraph/.bashrc && ./tigergraph/app/cmd/gsql < /home/tigergraph/queries/query_01.gsql"
                 
-          # - name: Run query01 on sample-nodes.csv and collect metrics
-          #   id: metrics
-          #   run: |
-          #     set -euo pipefail
-          #     echo "Running query_01 for all IDs in sample-nodes.csv"
-          #     START_TIME=$(date +%s)
-          #     OUTPUT=$(docker exec tigergraph bash -l <<'EOF'
-          #       set -e
-          #       CSV="/home/tigergraph/test1/sample_nodes.csv"
-          #       /usr/bin/time -v bash -c '
-          #         tail -n +2 "$CSV" | cut -d"," -f1 | while read -r ID; do
-          #           ./tigergraph/app/cmd/gsql "USE GRAPH ADS RUN QUERY query_01(\"$ID\")" > /dev/null
-          #         done
-          #       '
-          #     EOF
-          #     2>&1)
-          #     END_TIME=$(date +%s)
-          #     TOTAL_TIME=$((END_TIME - START_TIME))
-          #     PEAK_MEM=$(echo "$OUTPUT" | grep 'Maximum resident set size' | awk '{print $6}')
-          #     echo "Total execution time: $TOTAL_TIME seconds"
-          #     echo "Peak memory usage   : $PEAK_MEM KB"
-          #     echo "final_time=$TOTAL_TIME" >> "$GITHUB_OUTPUT"
-          #     echo "final_memory=$PEAK_MEM" >> "$GITHUB_OUTPUT"
-          # - name: Display results
-          #   run: |
-          #       echo "Final measured time   : ${{ steps.metrics.outputs.final_time }}"
-          #       echo "Final measured memory : ${{ steps.metrics.outputs.final_memory }} KB"
+          - name: Run query01 on sample-nodes.csv and collect metrics
+            id: metrics
+            run: |
+              set -eu pipefail
+              echo "Running query_01 for all IDs in sample-nodes.csv"
+              START_TIME=$(date +%s)
+              CSV="/home/tigergraph/test1/sample_nodes.csv"
+              tail -n +2 "\$CSV" | cut -d"," -f1 | while IFS= read -r ID; do
+                  ./tigergraph/app/cmd/gsql "USE GRAPH ADS RUN QUERY query_01(\"\$ID\")" > /dev/null
+              done
+              EOF
+              2>&1)
+              END_TIME=$(date +%s)
+              TOTAL_TIME=$((END_TIME - START_TIME))
+              PEAK_MEM=$(echo "$OUTPUT" | grep 'Maximum resident set size' | awk '{print $6}')
+              echo "Total execution time: $TOTAL_TIME seconds"
+              echo "Peak memory usage   : $PEAK_MEM KB"
+              echo "final_time=$TOTAL_TIME" >> "$GITHUB_OUTPUT"
+              echo "final_memory=$PEAK_MEM" >> "$GITHUB_OUTPUT"
+          - name: Display results
+            run: |
+                echo "Final measured time   : ${{ steps.metrics.outputs.final_time }}"
+                echo "Final measured memory : ${{ steps.metrics.outputs.final_memory }} KB"
