add CSV variable

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -85,6 +85,8 @@ jobs:
               echo "Running query_01 for all IDs in sample-nodes.csv"
               START_TIME=$(date +%s%N)
 
+              CSV="/home/tigergraph/test1/sample_nodes.csv"
+
               OUTPUT=$(
                 /usr/bin/time -v bash -c '
                   tail -n +2 "'"$CSV"'" | cut -d"," -f1 | while IFS= read -r ID; do
