--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -80,33 +80,34 @@ jobs:
           
           - name: Debug query01
             run: |
-                set -euo pipefail
+                docker exec tigergraph bash -lc '
+                  set -euo pipefail
 
-                CSV="/home/tigergraph/test1/sample_nodes.csv"
+                  CSV="/home/tigergraph/test1/sample_nodes.csv"
 
-                IDs=$(tail -n +2 "'"$CSV"'" | cut -d"," -f1)
-                TOTAL=0
-                FAILS=0
+                  TOTAL=0
+                  FAILS=0
 
-                for ID in $IDs; do
-                    # Run query
-                    if ./tigergraph/app/cmd/gsql "USE GRAPH ADS RUN QUERY query_01(\"$ID\")" > /dev/null 2>&1; then
-                        echo -n "."   # Successful
-                    else
-                        echo -n "F"   # Failed
-                        ((FAILS++))
-                    fi
-                    ((TOTAL++))
-                done
+                  tail -n +2 "$CSV" | cut -d"," -f1 | while IFS= read -r ID; do
+                      if ./tigergraph/app/cmd/gsql "USE GRAPH ADS RUN QUERY query_01(\"$ID\")" > /dev/null 2>&1; then
+                          echo -n "."
+                      else
+                          echo -n "F"
+                          FAILS=$((FAILS + 1))
+                      fi
+                      TOTAL=$((TOTAL + 1))
+                  done
 
-                echo
-                echo "Executed $TOTAL queries"
-                if [ "$FAILS" -gt 0 ]; then
-                    echo "Failed queries: $FAILS"
-                    exit 1   # Fail CI if any query failed
-                else
-                    echo "All queries succeeded"
-                fi
+                  echo
+                  echo "Executed $TOTAL queries"
+
+                  if [ "$FAILS" -gt 0 ]; then
+                      echo "Failed queries: $FAILS"
+                      exit 1
+                  else
+                      echo "All queries succeeded"
+                  fi
+                '
 
           - name: Run query01 on sample-nodes.csv and collect metrics
             id: metrics
