add time to docker contaienr and use it for memory usage check

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -109,6 +109,10 @@ jobs:
                 echo "All queries succeeded"
             fi
             '
+      - name: Install GNU time in TigerGraph container
+        run: |
+          docker exec -u root tigergraph apt update
+          docker exec -u root tigergraph apt install -y time
 
       - name: Run query01 on sample-nodes.csv and collect metrics
         id: metrics
@@ -121,32 +125,47 @@ jobs:
             CSV="/home/tigergraph/test1/sample_nodes.csv"
 
             START_TIME=$(date +%s%N)
-
             TOTAL=0
             FAILS=0
 
-            tail -n +2 "$CSV" | cut -d"," -f1 | while IFS= read -r ID; do
-            if ./tigergraph/app/cmd/gsql "USE GRAPH ADS RUN QUERY query_01(\"$ID\")" > /dev/null 2>&1; then
-            echo -n "."
-            else
-            echo -n "F"
-            FAILS=$((FAILS + 1))
-            fi
-            TOTAL=$((TOTAL + 1))
-            done
+            OUTPUT=$(
+              /usr/bin/time -v bash -c "
+                while IFS=, read -r ID _; do
+                  if [ \"\$ID\" = \"id\" ]; then
+                    continue
+                  fi
+
+                  if ./tigergraph/app/cmd/gsql \"USE GRAPH ADS RUN QUERY query_01(\\\"\$ID\\\")\" > /dev/null 2>&1; then
+                    echo -n \".\"
+                  else
+                    echo -n \"F\"
+                    echo fail >&2
+                  fi
+                done < \"$CSV\"
+              " 2>&1
+            )
 
             END_TIME=$(date +%s%N)
             TOTAL_TIME_MS=$(( (END_TIME - START_TIME) / 1000000 ))
+
+            TOTAL=$(echo "$OUTPUT" | tr -cd ".F" | wc -c)
+            FAILS=$(echo "$OUTPUT" | tr -cd "F" | wc -c)
+
+            PEAK_MEM_KB=$(echo "$OUTPUT" | grep "Maximum resident set size" | awk "{print \$6}")
 
             echo
             echo "Executed $TOTAL queries"
             echo "Failed   $FAILS queries"
             echo "Total execution time: ${TOTAL_TIME_MS} ms"
+            echo "Peak memory usage   : ${PEAK_MEM_KB} KB"
+
+            echo "final_time=${TOTAL_TIME_MS}" >> "$GITHUB_OUTPUT"
+            echo "final_memory=${PEAK_MEM_KB}" >> "$GITHUB_OUTPUT"
 
             if [ "$FAILS" -gt 0 ]; then
-            exit 1
+              exit 1
             fi
-            '
+          '
 
       - name: Display results
         run: |
