--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -106,7 +106,7 @@ jobs:
       #           echo "All queries succeeded"
       #       fi
       #       '
-      
+
       - name: Install GNU time in TigerGraph container
         run: |
           docker exec -u root tigergraph apt update
@@ -118,20 +118,23 @@ jobs:
           docker exec tigergraph bash -lc '
             set -euo pipefail
 
-            echo "Running query_01 for all IDs in sample-nodes.csv"
-
             CSV="/home/tigergraph/test1/sample_nodes.csv"
+            RUNS=5
 
-            START_TIME=$(date +%s%N)
-            TOTAL=0
-            FAILS=0
+            TIMES=()
+            MEMS=()
 
-            OUTPUT=$(
-              /usr/bin/time -v bash -c "
+            echo "Running query_01 workload $RUNS times"
+
+            for RUN in $(seq 1 $RUNS); do
+              echo
+              echo "Run $RUN/$RUNS"
+
+              START=$(date +%s%N)
+
+              /usr/bin/time -v -o /tmp/time_$RUN.txt bash -c "
                 while IFS=, read -r ID _; do
-                  if [ \"\$ID\" = \"id\" ]; then
-                    continue
-                  fi
+                  [ \"\$ID\" = \"id\" ] && continue
 
                   if ./tigergraph/app/cmd/gsql \"USE GRAPH ADS RUN QUERY query_01(\\\"\$ID\\\")\" > /dev/null 2>&1; then
                     echo -n \".\"
@@ -139,22 +142,34 @@ jobs:
                     echo -n \"F\"
                   fi
                 done < \"$CSV\"
-              " 2>&1
-            )
+              "
 
-            END_TIME=$(date +%s%N)
-            TOTAL_TIME_MS=$(( (END_TIME - START_TIME) / 1000000 ))
-            ONLY_OUTPUT=$(printf '%s\n' "$OUTPUT" | grep -o '^[.F]*' | head -n 1)
-            echo "Full output: $OUTPUT"
-            echo "Only output: $ONLY_OUTPUT"
+              END=$(date +%s%N)
+              DURATION_MS=$(( (END - START) / 1000000 ))
 
-            TOTAL=$(echo "$ONLY_OUTPUT" | tr -cd "." | wc -c)
-            FAILS=$(echo "$ONLY_OUTPUT" | tr -cd "F" | wc -c)
+              PEAK_MEM=$(grep "Maximum resident set size" /tmp/time_$RUN.txt | awk "{print \$6}")
 
-            PEAK_MEM_KB=$(echo "$OUTPUT" | grep "Maximum resident set size" | awk "{print \$6}")
-            
-            echo "Executed $TOTAL queries"
-            echo "Failed   $FAILS queries"
-            echo "Total execution time: ${TOTAL_TIME_MS} ms"
-            echo "Peak memory usage   : ${PEAK_MEM_KB} KB"
+              echo
+              echo "Run $RUN time : ${DURATION_MS} ms"
+              echo "Run $RUN mem  : ${PEAK_MEM} KB"
+
+              TIMES+=("$DURATION_MS")
+              MEMS+=("$PEAK_MEM")
+            done
+
+            # ---- sort metrics ----
+            SORTED_TIMES=($(printf "%s\n" "${TIMES[@]}" | sort -n))
+            SORTED_MEMS=($(printf "%s\n" "${MEMS[@]}" | sort -n))
+
+            # ---- select required stats ----
+            SECOND_BEST_TIME=${SORTED_TIMES[1]}
+            SECOND_WORST_MEM=${SORTED_MEMS[$((RUNS - 2))]}
+
+            echo
+            echo "================ FINAL METRICS ================"
+            echo "Second best execution time : ${SECOND_BEST_TIME} ms"
+            echo "Second worst memory usage  : ${SECOND_WORST_MEM} KB"
+
+            echo "final_time=${SECOND_BEST_TIME}" >> "$GITHUB_OUTPUT"
+            echo "final_memory=${SECOND_WORST_MEM}" >> "$GITHUB_OUTPUT"
           '
