--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -114,7 +114,7 @@ jobs:
 
       - name: Change mode
         run: |
-          docker exec tigergraph chmod +x /home/tigergraph/test1/test1.sh
+          docker exec -u root tigergraph chmod +x /home/tigergraph/test1/test1.sh
 
       - name: Run query01 on sample-nodes.csv and collect metrics
         id: metrics
